[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/skills/judgementcut.png" type="Texture" id=1]
[ext_resource path="res://scripts/skills/JudgementCut.gd" type="Script" id=2]
[ext_resource path="res://sprites/skills/judgementcut_charge.png" type="Texture" id=3]
[ext_resource path="res://sound/fx/Sound/SoundFX/anime_charge_03-96230.mp3" type="AudioStream" id=4]
[ext_resource path="res://sound/fx/Sound/SoundFX/single-sword-hit-98777.mp3" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Charge"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../JudgementcutCharge:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../FX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../JudgementcutCharge:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Release"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "apply_dmg"
}, {
"args": [  ],
"method": "apply_dmg"
}, {
"args": [  ],
"method": "apply_dmg"
}, {
"args": [  ],
"method": "apply_dmg"
}, {
"args": [  ],
"method": "apply_dmg"
}, {
"args": [  ],
"method": "apply_dmg"
}, {
"args": [  ],
"method": "apply_dmg"
}, {
"args": [  ],
"method": "apply_dmg"
}, {
"args": [  ],
"method": "apply_dmg"
}, {
"args": [  ],
"method": "wait_release_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("../FX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0443294,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0428517,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 148.967, 156.965 )

[node name="JudegementCut" type="Node2D"]
script = ExtResource( 2 )

[node name="Judgementcut" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.620509, 0.620509 )
texture = ExtResource( 1 )
hframes = 14
frame = 1

[node name="JudgementcutCharge" type="Sprite" parent="."]
position = Vector2( 0, -15.7148 )
scale = Vector2( 0.299103, 0.299103 )
texture = ExtResource( 3 )
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Judgementcut")
anims/Charge = SubResource( 1 )
anims/RESET = SubResource( 3 )
anims/Release = SubResource( 2 )

[node name="HitboxAttack" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxAttack"]
scale = Vector2( 0.500111, 0.500111 )
shape = SubResource( 4 )

[node name="FX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="HitboxAttack" to="." method="_on_HitboxAttack_body_entered"]
[connection signal="body_exited" from="HitboxAttack" to="." method="_on_HitboxAttack_body_exited"]
